<resources>
    <string name="app_name">Triump</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Sign out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="sharedprefs">VOPSharedPrefs</string>
    <string name="foursquaretoken">FoursquareToken</string>
    <string name="userid">UserId</string>
    <string name="first_launch">Welcome to Triump</string>
    <string name="profile">Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_event">Events</string>
    <string name="title_activity_profile">Profile</string>
    <string name="logOutButton">Sign out</string>
    <string name="signin_with_foursquare">Sign in with your Foursquare account!</string>
    <string name="app_not_installed_message">To do this, you’ll need the latest version of Foursquare installed.</string>
    <string name="backendtoken">backendToken</string>
    <string name="placeholder_lorem_ipsum">Lorem ipsum</string>
    <string name="navdrawer_item_leaderboards">Leaderboards</string>
    <string name="navdrawer_item_main">Main</string>
    <string name="navdrawer_item_settings">Settings</string>
    <string name="navdrawer_item_logout">Sign out</string>
    <string name="navdrawer_item_event">Events</string>
    <string name="navdrawer_item_feedback">Feedback</string>
    <string name="navdrawer_item_reward">Rewards</string>
    <string name="navdrawer_item_profile">Profile</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="title_activity_leaderboards">Leaderboards</string>
    <string name="welcome_triump">Welcome to Triump</string>
    <string name="help_your_friends">Triump is all about helping your group. Do you want to check in now and start helping your group?</string>
    <string name="triump_quick_start">Join an existing group or make one yourself!\nSwipe right to access the navigation drawer\nSwipe down to refresh a page</string>
    <string name="no_ranking">Currently there aren\'t any groups competing for this venue. Click check-in to be the first to conquer it!</string>

    <string name="loading_data">loading…</string>
    <string name="retrieving_data">Retrieving data</string>

    <string name="lost_connection">The device lost his connection</string>
    <string name="connection">The device is connected</string>
    <string name="locationLongitude">locationLongitude</string>
    <string name="locationLatitude">locationLatitude</string>
    <string name="locationAvailable">locationAvailable</string>
    <string name="waiting_for_location">Waiting for location…</string>
    <string name="group_banner_description">banner of your group</string>
    <string name="go_to_group">View this group</string>
    <string name="group_id">id of group</string>

    <string name="group_title">Update from your group</string>
    <string name="group_info">Loading…</string>
    <string name="reward_title">Reward received!</string>
    <string name="reward_claim">Claim now!</string>
    <string name="reward_info">Your group won!</string>
    <string name="venue_title">Places nearby</string>
    <string name="venue_name">Loading venue</string>
    <string name="venue_info">Loading venue description</string>
    <string name="event_title">Trending events</string>
    <string name="event_name">Loading event</string>
    <string name="event_info">Loading event description</string>

    <string name="title_activity_group">GroupActivity</string>
    <string name="facebook_app_id">1388764728108146</string>
    <string name="ready">ready</string>
    <string name="set">set</string>
    <string name="triump">triump</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Enter group</string>
    <string name="action_add">Add group</string>
    <string name="navdrawer_item_events">Events</string>

    <string name="app_info">Triump is an application to organise events and win promotions!</string>
    <string name="app_info_title">Information about Triump</string>
    <string name="tutorial_finish">Got it</string>

    <!-- Event -->
    <string name="no_event">No events available for you.</string>
    <string name="button_text_set">Set</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="event_select_groups_dialog_title">Select groups for event</string>
    <string name="navdrawer_item_groups">Groups</string>
    <string name="title_activity_grouplist">Groups</string>
    <string name="search">Search</string>
    <string name="welcome_to_triump">Welcome to Triump</string>
    <string name="make_own_event">Make your own event</string>
    <string name="no_events_available">No events available</string>

    <string name="venue_image">image of the venue</string>
    <string name="new_event">New Event</string>
    <string name="title_activity_accept_members">AcceptMembers</string>

    <string name="pending_requests">Pending requests</string>
    <string name="set_banner">Change cover</string>
    <string name="manage_members">Manage members</string>

    <string name="events">events</string>
    <string name="rewards">rewards</string>
    <string name="title_activity_first_launch">FirstLaunchActivity</string>

    <!-- feedback -->
    <string name="thanking_for_feedback">Thanks for giving us your feedback</string>
    <string name="feedback_dialog_radio_button_bug">Bug</string>
    <string name="feedback_dialog_radio_button_idea">Idea</string>
    <string name="feedback_dialog_radio_button_other">Other</string>
    <string name="feedback_dialog_no_comment_toast">Please enter a comment or hit cancel</string>
    <string name="title_activity_feedback">Feedback Activity</string>
    <string name="feedback_dialog_title">Feedback</string>
    <string name="feedback_dialog_message">Love it? Hate it? Would you like to suggest a new feature or report a bug? We would love to hear from you:</string>
    <string name="feedback_dialog_send_mail">Send mail...</string>
    <string name="feedback_dialog_no_mail_clients">There are no email clients installed</string>

    <!-- Notification Messages -->
    <string name="notification_top_ranking_event">Congrats, Top ranking in event!</string>
    <string name="notification_feedback">Give us your opinion</string>


    <string name="title_activity_rewards">Rewards</string>
    <string name="new_event_select_groups_dialog_title">Choose groups</string>
     <string name="button_text_send">Send</string>
    <string name="notification_title">Triump Notification</string>
    <string name="no_reward">No rewards available</string>
    <string name="dialog_message_item_pinned">Show this message to the owner and claim your reward!</string>
    <string name="new_event_title">Make your own event</string>
    <string name="date_from">From</string>
    <string name="date_to">To</string>
    <string name="new_event_name">Name</string>
    <string name="new_event_reward">Reward</string>
    <string name="new_event_select_groups">Select groups</string>
    <string name="new_event_create_event_button_text">Save Event</string>
    <string name="new_event_succes">Success</string>
    <string name="new_event_failed">Making new event failed, please try again</string>
    <string name="new_group_success">Success</string>
    <string name="new_group_failed">Making new group failed, please try again</string>
    <string name="new_group_description">Group description</string>
    <string name="new_group_name">Group name</string>
    <string name="new_group_select_type">Type</string>
    <string name="title_activity_new_group">NewGroupActivity</string>
    <string name="action_discard">Discard</string>
    <string name="add_group">Add group</string>
    <string name="claim_reward">Claim reward!</string>

    <!-- achievements -->
    <string name="profile_achievements">Achievements</string>
    <string name="ach1_title">Goalkeeper</string>
    <string name="ach1_description">Requirement: </string>

    <string name="ach2_title">Defender of the castle</string>
    <string name="ach2_description">Requirement: </string>

    <string name="ach3_title">Scavenger</string>
    <string name="ach3_description">Requirement: Score 10 times the first point at an event </string>

    <string name="ach4_title">Medal I</string>
    <string name="ach4_description"> Requirement: Score 1 000 points</string>

    <string name="ach5_title">Medal II</string>
    <string name="ach5_description">Requirement: Score 10 000 points </string>

    <string name="ach6_title">Life Achievement</string>
    <string name="ach6_description">Requirement: Win 20 events </string>
    <string name="incorrect_date">Incorrect date</string>
    <string name="incorrect_groups">Please select at least one group</string>
    <string name="incorrect_name">Please add name and reward</string>
    <string name="everyone">Everyone</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_group_size">Select group size</string>
    <string name="min">Min:</string>
    <string name="max">Max:</string>
    <string name="error_checkin">An error occured while checking in, please try again later.</string>
    <string name="no_ranking_for_filter">There are no rankings matching your filter.</string>
    <string name="no_checkin_yet">Nobody has checked in here yet.</string>

</resources>
