<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextComment"
        android:hint="comment..."/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:id="@+id/radioGroupFeedbackType"
        android:gravity="right"
        android:paddingRight="15dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_dialog_radio_button_bug"
            android:id="@+id/radioButtonBug" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_dialog_radio_button_idea"
            android:id="@+id/radioButtonIdea" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_dialog_radio_button_other"
            android:id="@+id/radioButtonOther" />
    </RadioGroup>
</LinearLayout>