<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="horizontal"
    style="@style/CardViewDark"
    card_view:cardCornerRadius="2dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:showDividers="none">

        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reward_title"
            android:textColor="@color/theme_primary"
            android:textSize="25sp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight">

            <TextView
                android:id="@+id/reward_venue"
                android:layout_width="fill_parent"
                android:layout_height="26dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:layout_marginBottom="8dp"
                android:text="@string/venue_name"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/reward_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/reward_venue"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_alignWithParentIfMissing="true"
                android:layout_marginTop="8dp"
                android:text="@string/reward_info"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>