<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout style="@style/HeaderBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="5dp">
        <include layout="@layout/toolbar_actionbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="72dp"
            android:paddingRight="32dp" >

            <!-- ******************************

            Name in colored box

            ************************************ -->

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/group_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/new_group_name"
                android:textSize="40sp"
                app:met_floatingLabel="highlight"
                app:met_hideUnderline="false"
                app:met_textColor="@android:color/white"
                app:met_primaryColor="@color/primary_accent"
                app:met_singleLineEllipsis="true"/>


            <!-- ******************************

                Group description

            ************************************ -->

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/group_description_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_group_description"
                app:met_floatingLabel="highlight"
                app:met_hideUnderline="false"
                app:met_textColor="@android:color/white"
                app:met_primaryColor="@color/primary_accent"
                app:met_singleLineEllipsis="true"/>
        </LinearLayout>


    </LinearLayout>

    <com.gc.materialdesign.views.ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">
        <!-- ******************************

                    Select type

        ************************************ -->


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/new_group_select_type"
                android:id="@+id/textView"
                android:textSize="14sp"
                android:layout_marginBottom="0dp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerGroupType"
                android:spinnerMode="dropdown" />




            <!-- ******************************

                    Button create

            ************************************ -->

            <com.gc.materialdesign.views.ButtonRectangle
                android:layout_marginTop="30dp"
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/theme_primary"
                android:text="@string/add_group"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </com.gc.materialdesign.views.ScrollView>

</LinearLayout>