<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="be.ugent.vop.ui.profile.ProfileFragment"
    android:paddingBottom="10dp">
    <be.ugent.vop.ui.widget.CircularImageView
        android:id="@+id/profilePic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/profile_picture"
        android:layout_marginTop="19dp"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/fantastic_background"/>
    <TextView
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_data"
        android:layout_toRightOf="@id/profilePic"
        android:layout_toEndOf="@id/profilePic"
        android:layout_marginTop="19dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_data"
        android:layout_below="@+id/firstname"
        android:layout_toRightOf="@id/profilePic"
        android:layout_toEndOf="@id/profilePic"
        android:layout_marginTop="19dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_data"
        android:layout_below="@+id/lastname"
        android:layout_toRightOf="@id/profilePic"
        android:layout_toEndOf="@id/profilePic"
        android:layout_marginTop="19dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />
    <TextView
        android:id="@+id/date_joined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retrieving_data"
        android:layout_below="@+id/email"
        android:layout_toRightOf="@id/profilePic"
        android:layout_toEndOf="@id/profilePic"
        android:layout_marginTop="19dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />
<!--    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:background="@drawable/log_out_button"
        android:text="@string/logOutButton"
        android:id="@+id/btnLogout"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />-->

</RelativeLayout>
