<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout style="@style/HeaderBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="5dp">
        <include layout="@layout/toolbar_actionbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="72dp"
            android:paddingRight="32dp" >

            <!-- ******************************

            Name and reward in colored box

            ************************************ -->

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/new_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_event_name"
                android:textSize="40sp"
                app:met_floatingLabel="highlight"
                app:met_hideUnderline="false"
                app:met_textColor="@android:color/white"
                app:met_primaryColor="@color/primary_accent"
                app:met_singleLineEllipsis="true"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/new_event_reward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_event_reward"
                app:met_floatingLabel="highlight"
                app:met_hideUnderline="false"
                app:met_textColor="@android:color/white"
                app:met_primaryColor="@color/primary_accent"
                app:met_singleLineEllipsis="true"/>
        </LinearLayout>


    </LinearLayout>

    <com.gc.materialdesign.views.ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <!-- ******************************

                Start and end date and time

            ************************************ -->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="20dp"
            android:paddingLeft="35dp"
            android:paddingRight="20dp"  >

            <!-- From date and time -->

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="10dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/new_event_start_date"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_from"
                    android:focusableInTouchMode="false"
                    android:drawableRight="@drawable/icon_expand"
                    android:drawableEnd="@drawable/icon_expand"
                    android:inputType="date"
                    android:layout_gravity="center_horizontal"
                    app:met_floatingLabel="highlight"
                    app:met_hideUnderline="false"
                    app:met_textColor="@android:color/white"
                    app:met_primaryColor="@color/primary_accent"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/new_event_start_time"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:hint=""
                    android:focusableInTouchMode="false"
                    android:drawableRight="@drawable/icon_expand"
                    android:drawableEnd="@drawable/icon_expand"
                    android:layout_gravity="center_horizontal"
                    app:met_floatingLabel="highlight"
                    app:met_hideUnderline="false"
                    app:met_textColor="@android:color/white"
                    app:met_primaryColor="@color/primary_accent"/>

            </LinearLayout>


            <!-- From date and time -->


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/new_event_end_date"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_to"
                    android:focusableInTouchMode="false"
                    android:drawableRight="@drawable/icon_expand"
                    android:drawableEnd="@drawable/icon_expand"
                    android:inputType="date"
                    android:layout_gravity="center_horizontal"
                    app:met_floatingLabel="highlight"
                    app:met_hideUnderline="false"
                    app:met_textColor="@android:color/white"
                    app:met_primaryColor="@color/primary_accent"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/new_event_end_time"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:hint=""
                    android:focusableInTouchMode="false"
                    android:drawableRight="@drawable/icon_expand"
                    android:drawableEnd="@drawable/icon_expand"
                    android:layout_gravity="center_horizontal"
                    app:met_floatingLabel="highlight"
                    app:met_hideUnderline="false"
                    app:met_textColor="@android:color/white"
                    app:met_primaryColor="@color/primary_accent"/>

            </LinearLayout>


            <!-- ******************************

                Select applicable groups

            ************************************ -->

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/new_event_select_groups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:hint="@string/new_event_select_groups"
                android:focusableInTouchMode="false"
                android:drawableRight="@drawable/icon_expand"
                android:drawableEnd="@drawable/icon_expand"
                android:layout_gravity="center_horizontal"
                android:inputType="textMultiLine"
                app:met_floatingLabel="highlight"
                app:met_hideUnderline="false"
                app:met_textColor="@android:color/white"
                app:met_primaryColor="@color/primary_accent"/>

            <com.gc.materialdesign.views.ButtonRectangle
                android:layout_marginTop="30dp"
                android:id="@+id/buttonCreateEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/theme_primary"
                android:text="@string/new_event_create_event_button_text"
                android:layout_gravity="center_horizontal"/>



        </LinearLayout>

    </com.gc.materialdesign.views.ScrollView>

</LinearLayout>